# Forge

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: release.yml
src/: detect.rs  main.rs  package_manager.rs  ui.rs
src/tools/: aws.rs  bun.rs  cli_tools.rs  core.rs  docker.rs  editors.rs  gcloud.rs  go.rs  jdk.rs  mod.rs  node.rs  php.rs  python.rs  ruby.rs  rust_lang.rs  shell.rs  terraform.rs  vcs.rs
src/tools/databases/: mod.rs  mongodb.rs  mysql.rs  postgres.rs  redis.rs
src/tools/mobile/: android_studio.rs  android_tools.rs  cocoapods.rs  flutter.rs  mod.rs  react_native.rs  xcode.rs
