[package]
name = "forge"
version = "0.1.0"
edition = "2024"
description = "Interactive developer environment setup CLI"
license = "MIT"

[[bin]]
name = "forge"
path = "src/main.rs"

[dependencies]
clap      = { version = "4", features = ["derive"] }
dialoguer = "0.11"
indicatif = "0.17"
colored   = "2"
which     = "6"
anyhow    = "1"
